<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="25dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:background="@color/bgofview">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pic"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:src="@drawable/p1_prachi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/name1"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:text="@string/adarsh_kumar_goswami"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/pic"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/mailid1"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/adarsh23_gmail_com"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/pic"
            app:layout_constraintTop_toBottomOf="@id/name1"/>

        <Button
            android:id="@+id/view_button"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_button_prachi"
            android:text="@string/view"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button2"


            />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:background="@drawable/custom_button_prachi"
            android:contentDescription="@string/todo"
            android:src="@drawable/call_prachi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>