<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/actionbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#00000000"
        app:elevation="0dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_form"

            android:textColor="@color/txt"
            android:shadowColor="@color/outline"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="326dp"
        android:layout_height="569dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionbar"
        app:cardCornerRadius="25dp"
        android:layout_margin="20dp"

        >

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:text="@string/details"
            android:textSize="14sp"
            android:background="@color/bg"/>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:src="@drawable/ic_submit_button"
        app:layout_constraintTop_toBottomOf="@id/cv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="TODO" />


</androidx.constraintlayout.widget.ConstraintLayout>
